--- a/src/styles.css
+++ b/src/styles.css
@@ -15,6 +15,8 @@
     flex-basis: var(--flex-edges);
     display: flex;
     border-right: 2px solid cadetblue;
+    justify-content: center;
+    padding: 1%;
 }
 
 #midThird {
@@ -22,7 +24,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border-right: 2px solid cadetblue;
 }
 
 #rightThird {
@@ -47,8 +48,18 @@ input[type=number] {
     padding: 0;
     text-align: center;  
     font-size: 2rem;
-    
-    -moz-appearance: textfield; /* Firefox; have to update this to support all browsers */
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield;
 }
 
 #sudoku-board :nth-child(3n):not(:nth-child(9n)) {
