--- a/src/sudokuboard/sudokuboard.css
+++ b/src/sudokuboard/sudokuboard.css
@@ -4,7 +4,6 @@
 
 #sudoku-board {
     justify-content: center;
-    width: 65vh;
     aspect-ratio: 1/1;
     margin: 0 auto;
 }
@@ -14,13 +13,26 @@ input[type=number] {
     outline: 0;
     width: 100%;
     height: 100%;
-    padding: 0;
     text-align: center;
     font-size: 2rem;
+    border: 2px solid black;
 }
 
-/* highlight the 3x3 grids in the table */
+tr:nth-child(3n+1):not(:first-child) td input {
+    border-top: 4px solid black;
+}
 
+tr:nth-child(3n):not(:first-child) td input {
+    border-bottom: 4x solid black;
+}
+
+td:nth-child(3n+1):not(:first-child):not(:last-child) input {
+    border-left: 4px solid black;
+}
+
+td:nth-child(3n):not(:first-child):not(:last-child) input {
+    border-right: 4px solid black;
+}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
