--- a/src/sudokuboard/sudokuboard.css
+++ b/src/sudokuboard/sudokuboard.css
@@ -12,6 +12,8 @@ table {
     height: var(--table-width);
     border-collapse: collapse;
     margin: auto;
+    border-top: 1px solid var(--border-color);
+    border-left: 1px solid var(--border-color);
 }
 
 td {
