--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,8 @@
 /* import work sans font */
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:400,500,600,700&display=swap");
 
 * {
-    /* font family work sans and remove margins */
-    font-family: 'Work Sans', sans-serif;
-    margin: 0;
+  /* font family work sans and remove margins */
+  font-family: "Work Sans", sans-serif;
+  margin: 0;
 }
