--- a/src/options/shortcuts-overlay/overlay.css
+++ b/src/options/shortcuts-overlay/overlay.css
@@ -5,12 +5,13 @@
   width: 40%;
   height: 40%;
   transform: translate(-50%, -50%);
-  background-color: rgba(32, 30, 30, 0.95);
+  background-color: rgb(77, 56, 56);
   animation: fadeIn 0.15s ease-in;
   display: flex;
-  gap: 1%;
   flex-direction: column;
-  padding: 1%;
+  padding: 1em;
+  z-index: 10;
+  border-radius: 2%;
 }
 ul,
 li {
@@ -18,11 +19,14 @@ li {
 }
 
 .key-items {
+  padding: 0;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  gap: 5%;
   height: 100%;
+  column-count: 2;
+  gap: 1rem;
+  width: 100%;
 }
 
 @keyframes fadeIn {
