--- a/src/profile/settings-overlay/overlay.css
+++ b/src/profile/settings-overlay/overlay.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   animation: fadeIn 0.2s ease-in;
+  z-index: 10;
 }
 
 .cats-div {
@@ -53,4 +54,8 @@
   to {
     opacity: 1;
   }
+}
+
+.selected {
+  background: gray;
 }
